--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,14 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>me.amar.grantxproject.GrantXProject</mainClass> <!-- You have to replace this with a path to your main class like my.path.Main -->
+                                </transformer>
+                            </transformers>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                         </configuration>
+
                     </execution>
                 </executions>
             </plugin>
@@ -54,11 +60,6 @@
 
     <repositories>
         <repository>
-            <id>jcenter</id>
-            <name>jcenter-bintray</name>
-            <url>http://jcenter.bintray.com</url>
-        </repository>
-        <repository>
             <id>spigotmc-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
@@ -69,11 +70,6 @@
     </repositories>
 
     <dependencies>
-        <dependency>
-            <groupId>net.dv8tion</groupId>
-            <artifactId>JDA</artifactId>
-            <version>4.2.0_168</version>
-        </dependency>
 
         <dependency>
             <groupId>org.spigotmc</groupId>
