hello I made stuff like uhh xsetlogs grant|revoke|expire|all #channel command ok

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,9 +1,13 @@
-bot-token: 0
+bot-token: '0'
 grant:
   channel-id: 0
+  is-enabled: false
 
 expire:
   channel-id: 0
+  is-enabled: false
 
 revoke:
   channel-id: 0
+  is-enabled: false
+
