final commit (question mark?)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,3 +11,18 @@ revoke:
   channel-id: 0
   is-enabled: false
 
+##############################################################
+## NOTE:
+## TO USE THE BOT, GET YOUR TOKEN FROM https://discord.com/developers/applications BY MAKING A NEW APPLICATION, THEN GOING TO "BOT" TAB, THEN COPYING THE TOKEN.
+## DO NOT CONFIGURE ANY OF THE ABOVE OTHER THAN THE BOT TOKEN, INSTEAD USE THE COMMANDS TO SET THE CHANNELS BY INVITING THE BOT TO YOUR SERVER AND RUNNING "logx help"
+## MAKE SURE YOUR BOT IS PRIVATE, UNLESS YOU WANT OTHER SERVERS TO HAVE YOUR LOGS.
+## FOR SUPPORT, JOIN AMAR'S DISCORD SERVER https://discord.gg/JNNANeQsAJ AND OPEN A SUPPORT TICKET.
+## KEEP IN MIND THAT DEMENG DID NOT MAKE THIS, AMAR AND HIS ADMIN BI3HER DID.
+## YOU CAN SUGGEST ADDITIONS TO THIS ADD-ON IN THE DISCORD SERVER, TOO!
+##############################################################
+
+## SUPPORT ## SUPPORT ## SUPPORT ##
+## https://discord.gg/JNNANeQsAJ ##
+## https://discord.gg/JNNANeQsAJ ##
+## https://discord.gg/JNNANeQsAJ ##
+## SUPPORT ## SUPPORT ## SUPPORT ##
